# Algorithms_and_models_of_calculations

./: README.md
Задача 1/: CMakeLists.txt  Functions.cpp  Functions.h  Graph.cpp  Graph.h  README.md  main.cpp  tests.cpp
Задача 2/: CMakeLists.txt  README.md  fake_crypto.h  solution.h  tests.cpp  Задача 2.tex
